@@ -480,6 +480,7 @@
 #define IDC_SETPWPOLICY                 1281
 #define IDC_CLEARPWPOLICY               1282
 #define IDC_SAMPLETEXT                  1283
+#define IDC_TREATWHITESPACEASEMPTY      1284
 
 // Next default values for new objects
 // 
@@ -487,7 +488,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        415
 #define _APS_NEXT_COMMAND_VALUE         30000
-#define _APS_NEXT_CONTROL_VALUE         1284
+#define _APS_NEXT_CONTROL_VALUE         1285
 #define _APS_NEXT_SYMED_VALUE           149
 #endif
 #endif
